# zed

./: CREATE_PULL_REQUEST_DIAGRAM.md  CREATE_PULL_REQUEST_QUICK_REF.md  CREATE_PULL_REQUEST_README.md  CREATE_PULL_REQUEST_TECHNICAL.md  CREATE_PULL_REQUEST_WORKFLOW.md
crates/editor/src/: hover_popover.rs
crates/git_ui/src/: git_panel.rs
crates/platform_title_bar/: Cargo.toml
crates/platform_title_bar/src/: platform_title_bar.rs
crates/settings/src/: settings_store.rs
crates/workspace/src/: workspace.rs
crates/zed/src/: zed.rs
crates/zed/src/zed/: open_log_view.rs
crates/zed_actions/src/: lib.rs
