[package]
name = "platform_title_bar"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/platform_title_bar.rs"
doctest = false

[dependencies]
feature_flags.workspace = true
gpui.workspace = true
project.workspace = true
settings.workspace = true
smallvec.workspace = true
theme.workspace = true
ui.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# [feat-linux] Linux-only Settings portal dependency used to read and watch
# the desktop `button-layout` setting for title bar window controls.
ashpd.workspace = true
# [feat-linux] Stream utilities used by the live Linux settings watcher.
futures.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
